--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@modules/*": ["src/modules/*"]
+    },
     "incremental": true
   },
   "exclude": ["node_modules"]
