--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,11 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "paths": {
-      "@modules/*": ["src/modules/*"]
-    },
     "incremental": true
   },
   "exclude": ["node_modules"]
